crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/transient_state_variable/generated/slang/0.8.27-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:6:27]
   │
 6 │     uint public transient x;
   │                           ┬  
   │                           ╰── Error occurred here.
───╯
